@@ -1,0 +1,26 @@
+;-*-Doctest-*-
+
+==================
+Default Dimensions
+==================
+
+Verify that the media player widgets take default dimensions from the
+IVideo schema.
+
+    >>> import Products.CMFPlone.utils
+    >>> self.loginAsPortalOwner()
+    >>> foo = Products.CMFPlone.utils._createObjectByType(
+    ...     'File', self.portal, 'foo')
+
+    >>> class Context(object):
+    ...     def __init__(self, context):
+    ...         self.context = context
+    >>> context = Context(Context(foo))
+
+    >>> from p4a.video.flv import _player
+    >>> _player.FLVVideoPlayer(context)(None, None)
+    '...width="320" height="262"...
+
+    >>> from p4a.video.swf import _player
+    >>> _player.SWFVideoPlayer(context)(None, None)
+    '...width="320" height="262"...
