@@ -27,8 +27,10 @@ class IVideo(interface.Interface):
     rich_description = schema.Text(title=u'Rich Text Description',
                                    required=False)
     file = p4afile.FileField(title=u'File', required=False)
-    width = schema.Int(title=u'Width', required=False, readonly=False)
-    height = schema.Int(title=u'Height', required=False, readonly=False)
+    width = schema.Int(title=u'Width', default=320, required=False,
+                       readonly=False)
+    height = schema.Int(title=u'Height', default=240, required=False,
+                        readonly=False)
     duration = schema.Float(title=u'Duration', required=False, readonly=False)
 
     video_image = p4aimage.ImageField(title=u'Video Image', required=False,
