@@ -1,0 +1,30 @@
+;-*-Doctest-*-
+
+==========
+Mime Types
+==========
+
+Verify that the appropriate adapters can be retrieved for all the
+supported mime types.
+
+    >>> mime_types = [
+    ...     'video/x-flv', 'application/x-flash-video',
+    ...     'video/quicktime', 'video/mp4',
+    ...     "application/vnd.rn-realmedia", "video/vnd.rn-realvideo",
+    ...     "application/x-shockwave-flash",
+    ...     "video/x-msvideo", "video/x-ms-asf", "video/x-ms-wmv",
+    ...     "video/x-ms-wma", "video/x-ms-avi",
+    ...     ]
+
+    >>> from zope import interface
+    >>> from p4a.video import interfaces
+    >>> class Context(object):
+    ...     interface.implements(interfaces.IPossibleVideo)
+    >>> context = Context()
+
+    >>> from zope import component
+    >>> for mime_type in mime_types:
+    ...     _ = component.getAdapter(
+    ...         context, interfaces.IVideoDataAccessor, mime_type)
+    ...     _ = component.getAdapter(
+    ...         context, interfaces.IMediaPlayer, mime_type)
