@@ -1,0 +1,9 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope">
+
+  <include package="." />
+
+  <adapter factory=".videoanno.AnnotationVideo"
+           for="zope.annotation.interfaces.IAnnotatable" />
+
+</configure>
