@@ -12,6 +12,14 @@ Features
 
 * Now uses p4a.subtyper to expose video subtype action (Rocky Burt)
 
+Bug Fixes
+---------
+
+* Support additional mime type synonyms (Ross Patterson)
+
+* Support reasonable default dimensions for the players 
+  (Ross Patterson)
+
 Miscellaneous
 -------------
 
